# reference-example-components

./: README.md  index.yaml  package-lock.json
source/ProductCatalog/MCPServerMicroservice/: .dockerignore  .gitignore  MCP_CATALOG_PROMPT_GUIDE.md  MCP_CLIENT_PROMPT_EXAMPLES.md  MCP_CLIENT_USAGE_GUIDE.md  MCP_REQUEST_RESPONSE_EXAMPLES.md  MIGRATION_GUIDE.md  README.md  prodcat-mcp-dockerfile  product_catalog_api.py  product_catalog_mcp_server.py  pyproject.toml  run_server.ps1  run_server.sh  test_mcp_integration.py  test_product_catalog_api.py  test_streamable_http.py
source/ProductCatalog/MCPServerMicroservice/example_payloads/: catalog.json  category.json  create_catalog.json  get_catalogs.json  productOffering.json  productOfferingPrice.json  productSpecification.json
source/ProductCatalog/MCPServerMicroservice/postman_collection/: Postman-Product_Catalog.postman_collection.json
source/ProductCatalog/MCPServerMicroservice/test_payloads/: enterprise_catalog.json  enterprise_ddos_advanced_offering.json  enterprise_ddos_advanced_price.json  enterprise_ddos_spec.json  enterprise_ddos_standard_offering.json  enterprise_ddos_standard_price.json  enterprise_firewall_business_offering.json  enterprise_firewall_business_price.json  enterprise_firewall_enterprise_offering.json  enterprise_firewall_enterprise_price.json  enterprise_firewall_spec.json  enterprise_mpls_gold_offering.json  enterprise_mpls_gold_price.json  enterprise_mpls_platinum_offering.json  enterprise_mpls_platinum_price.json  enterprise_mpls_spec.json  enterprise_networking_category.json  (+29 more)
(+81 files in other folders)
